# porcupine

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .stylish.sh  BUILD  BUILD.bazel  LICENSE  README.md  TAGS  Test.txt  default.nix  nixpkgs.nix  package.yaml  porcupine.yaml  shell.nix  stack.yaml  tags
.circleci/: config.yml
.github/workflows/: greetings.yml
docrecords/: package.yaml
docrecords/src/Data/: DocRecord.hs
docrecords/src/Data/DocRecord/: OptParse.hs
docs/: index.html  index.md
documentation/: Configuration.md
examples/: Example1.hs
porcupine-core/: CHANGELOG.md  TAGS  package.yaml  porcupine-example1.yaml  porcupine-example2.yaml  porcupine.yaml  tags
porcupine-core/examples/: .saeed-test.hs.swo  Example1.hs
porcupine-core/examples/Example2/: Example2.hs
porcupine-core/examples/_funflow/coordinator.db/: db.sqlite
porcupine-core/examples/_funflow/store/: metadata.db
porcupine-core/examples/example-radon/: ExampleRadon.hs  Plotting.hs
porcupine-core/examples/example0/: Example0.hs
porcupine-core/examples/example0.1/: Example0_1.hs
porcupine-core/examples/example1/: Example1.hs
porcupine-core/examples/example1/data/Outputs/: Analysis-0.json
porcupine-core/examples/example2/: .Example2.hs.swp  Example2.hi  Example2.hs  Example2.md
porcupine-core/examples/example2/data/Inputs/: Stock-"aapl".json  Stock-"fb".json  Stock-"googl".json  Stock-0.json  Stock-1.json
porcupine-core/examples/example2/data/Outputs/: Analysis-0.json  Analysis-1.json
porcupine-core/examples/stress-write/: Main.hs
porcupine-core/src/: Porcupine.hs
porcupine-core/src/Control/Arrow/: FoldA.hs
porcupine-core/src/Control/Monad/: ReaderSoup.hs
porcupine-core/src/Control/Monad/ReaderSoup/: Katip.hs  Resource.hs
porcupine-core/src/Data/: Locations.hs  Representable.hs
porcupine-core/src/Data/Locations/: Accessors.hs  FunflowRemoteCache.hs  Loc.hs  LocVariable.hs  LocationAccessor.hs  LocationMonad.hs  LocationTree.hs  LogAndErrors.hs  Mappings.hs  SerializationMethod.hs  VirtualFile.hs
porcupine-core/src/Data/Locations/Accessors/: AWS.hs
porcupine-core/src/Network/AWS/S3/: TaskPipelineUtils.hs
porcupine-core/src/Porcupine/: FoldA.hs  Foldl.hs  Serials.hs  Tasks.hs  VFiles.hs
porcupine-core/src/Streaming/: TaskPipelineUtils.hs
porcupine-core/src/System/: ClockHelpers.hs  TaskPipeline.hs
porcupine-core/src/System/TaskPipeline/: CLI.hs  Caching.hs  ConfigurationReader.hs  Logger.hs  Options.hs  PTask.hs  PorcupineTree.hs  Repetition.hs  ResourceTree.hs  Run.hs  VirtualFileAccess.hs
porcupine-core/src/System/TaskPipeline/PTask/: Internal.hs
porcupine-core/src/System/TaskPipeline/Repetition/: Fold.hs  Foldl.hs  Internal.hs  Streaming.hs
porcupine-core/src/System/TaskPipeline/Tasks/: LayeredAccess.hs  Options.hs  Repetition.hs
porcupine-core/test/: Tests.hs
porcupine-core/test/Test/Porcupine/: PTask.hs
porcupine-http/: package.yaml
porcupine-http/examples/: ExampleHTTP.hs  ExamplePokeAPI.hs
porcupine-http/examples/example-Poke/: ExamplePokeAPI.hs  example-pokeapi.yaml
porcupine-http/examples/example-Stock/: ExampleStockAPI.hs  example-stock.yaml
porcupine-http/src/Data/Location/Accessors/: HTTP.hs
porcupine-http/src/Data/Locations/Accessors/: HTTP.hs
porcupine-s3/: package.yaml
porcupine-s3/examples/: ExampleS3.hs
porcupine-s3/src/Control/Monad/ReaderSoup/: AWS.hs
porcupine-s3/src/Data/Locations/Accessors/: AWS.hs
porcupine-s3/src/Network/AWS/S3/: TaskPipelineUtils.hs
reader-soup/: package.yaml
reader-soup/src/Control/Monad/: ReaderSoup.hs
reader-soup/src/Control/Monad/ReaderSoup/: AWS.hs  Katip.hs  Resource.hs
src/Control/: Logger.hs
src/Data/: AlmostSerializable.hs  DocRecord.hs  HumanSerializable.hs  Locations.hs  Persistent.hs  SerializationMethod.hs
src/Data/DocRecord/: OptParse.hs
src/Data/Locations/: Loc.hs  LocVariable.hs  Localizable.hs  LocationMonad.hs  LocationTree.hs  Mappings.hs  RepetitionKeys.hs  SerializationMethod.hs  VirtualFile.hs
src/Network/AWS/S3/: TaskPipelineUtils.hs
src/Porcupine/: Run.hs  Serials.hs  Tasks.hs
src/Streaming/: TaskPipelineUtils.hs
src/System/: Logger.hs  RunContext.hs
src/System/TaskPipeline/: ATask.hs  CLI.hs  ConfigurationReader.hs  Logger.hs  PTask.hs  Resource.hs  ResourceTree.hs  Run.hs  Tasks.hs
src/System/TaskPipeline/CLI/: Overriding.hs
src/System/TaskPipeline/Tasks/: LayeredAccess.hs  Options.hs  Repetition.hs
test/: DocTest.hs
