package(default_visibility = ["//visibility:public"])

load("//:simwork/simwork_binary.bzl", "haskell_benchmark", "jinko_haskell_library")
load(
    "@io_tweag_rules_haskell//haskell:haskell.bzl",
    "haskell_library",
)

alias(name = "pipeline-tools", actual = ":porcupine-core")

jinko_haskell_library(
    name = "docrecords",
    srcs = glob(["docrecords/src/**/*.hs"]),
    src_strip_prefix = "docrecords/src",
    deps =
        [
            "@hackage//:base",
            "@hackage//:aeson",
            "@hackage//:data-default",
            "@hackage//:lens",
            "@hackage//:optparse-applicative",
            "@hackage//:text",
            "@hackage//:unordered-containers",
            "@hackage//:vinyl",
            "@hackage//:yaml",
        ],
)

jinko_haskell_library(
    name = "reader-soup",
    srcs = glob(["reader-soup/src/**/*.hs"]),
    src_strip_prefix = "reader-soup/src",
    deps =
        [
            "@hackage//:base",
            "@hackage//:lens",
            "@hackage//:safe-exceptions",
            "@hackage//:transformers",
            "@hackage//:transformers-base",
            "@hackage//:mtl",
	    "@hackage//:monad-control",
            "@hackage//:mmorph",
            "@hackage//:unliftio-core",
            "@hackage//:vinyl",
            "@hackage//:resourcet",
            "@hackage//:katip",
        ],
)

jinko_haskell_library(
    name = "porcupine-core",
    srcs = glob(["porcupine-core/src/**/*.hs"]),
    src_strip_prefix = "porcupine-core/src",
    deps =
        [
            "@hackage//:aeson",
            "@hackage//:aeson-pretty",
            "@hackage//:attoparsec",
            "@hackage//:base",
            "@hackage//:binary",
            "@hackage//:binary-orphans",
            "@hackage//:bytestring",
            "@hackage//:cassava",
            "@hackage//:clock",
            "@hackage//:conduit",
            "@hackage//:containers",
            "@hackage//:contravariant", # Won't be necessary in GHC 8.6
            "@hackage//:data-default",
            "@hackage//:deepseq",
            "@hackage//:directory",
            "@hackage//:filepath",
            "@hackage//:funflow",
            "@hackage//:formatting",
            "@hackage//:foldl",
            "@hackage//:hashable",
            "@hackage//:katip",
            "@hackage//:lens",
            "@hackage//:monad-control",
            "@hackage//:mtl",
            "@hackage//:optparse-applicative",
            "@hackage//:path",
            "@hackage//:profunctors",
            "@hackage//:resourcet",
            "@hackage//:safe-exceptions",
            "@hackage//:store",
            "@hackage//:streaming",
            "@hackage//:streaming-bytestring",
            "@hackage//:streaming-conduit",
            "@hackage//:template-haskell",
            "@hackage//:temporary",
            "@hackage//:text",
            "@hackage//:transformers",
            "@hackage//:transformers-base",
            "@hackage//:unix",
            "@hackage//:unliftio-core",
            "@hackage//:unordered-containers",
            "@hackage//:url",
            "@hackage//:vector",
            "@hackage//:vinyl",
            "@hackage//:void",
            "@hackage//:yaml",
            ":docrecords",
	    ":reader-soup",
        ],
)

jinko_haskell_library(
    name = "porcupine-s3",
    srcs = glob(["porcupine-s3/src/**/*.hs"]),
    src_strip_prefix = "porcupine-s3/src",
    deps =
        [
            "@hackage//:base",
            "@hackage//:mtl",
            "@hackage//:safe-exceptions",
            "@hackage//:amazonka",
            "@hackage//:amazonka-core",
            "@hackage//:amazonka-s3",
            "@hackage//:katip",
            "@hackage//:lens",
            "@hackage//:monad-control",
            "@hackage//:resourcet",
            "@hackage//:bytestring",
            "@hackage//:streaming",
            "@hackage//:streaming-bytestring",
            "@hackage//:directory",
            "@hackage//:retry",
            "@hackage//:text",
            "@hackage//:filepath",
            "@hackage//:conduit",
            "@hackage//:conduit-extra",
            ":porcupine-core",
	    ":reader-soup",
        ],
)

jinko_haskell_library(
    name = "porcupine-http",
    srcs = glob(["porcupine-http/src/**/*.hs"]),
    src_strip_prefix = "porcupine-http/src",
    deps =
        [
            "@hackage//:aeson",
            "@hackage//:base",
            "@hackage//:containers",
            "@hackage//:transformers",
            "@hackage//:safe-exceptions",
            "@hackage//:http-conduit",
            "@hackage//:resourcet",
            "@hackage//:bytestring",
            "@hackage//:mime-types",
            "@hackage//:streaming",
            "@hackage//:streaming-bytestring",
            "@hackage//:conduit",
            "@hackage//:streaming-conduit",
            "@hackage//:text",
	    ":reader-soup",
            ":porcupine-core",
        ],
)
